--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -31,13 +31,15 @@ jobs:
     - name: Install dependencies
       run: poetry install --no-interaction --all-extras
     - name: Build documentation
-      run: poetry run poe docs --type build
+      run: |
+        poetry run poe docs --type build
+        touch documentation/build/.nojekyll
     - name: Setup Pages
-      uses: actions/configure-pages@v3
+      uses: actions/configure-pages@v4
     - name: Upload artifact
       uses: actions/upload-pages-artifact@v1
       with:
-        path: "documentation/build/html"
+        path: "documentation/build"
   deploy:
     environment:
       name: github-pages
