--- a/pyproject.toml
+++ b/pyproject.toml
@@ -100,6 +100,9 @@ gitchangelog = "3.0.4"
 pystache = "0.6.5"
 tabulate = "0.9.0"
 m2r = "^0.3.1"
+sphinx-multiversion = { "git" = "https://github.com/samtygier-stfc/sphinx-multiversion.git", branch = "prebuild_command" }
+sphinx-copybutton = "^0.5.2"
+sphinx-notfound-page = "^1.0.0"
 
 
 [tool.poetry.extras]
@@ -173,40 +176,53 @@ help = "Generate Pydantic models and endpoints information from OpenAPI"
 env = { "PYTHONPATH" = "scripts" }
 sequence = [{ cmd = "python scripts/types_generator/main.py" }, { ref = "format", "cwd" = "src/genai/schema"}]
 
+[tool.poe.tasks._git]
+control.expr = "type"
+args = ["type"]
+
+    [[tool.poe.tasks._git.switch]]
+    case = "latest_tag"
+    help = "Finds the latest released version (by GIT tag lookup)"
+    shell = "git tag --sort version:refname | grep -E '[0-9]' | tail -1"
+
+    [[tool.poe.tasks._git.switch]]
+    case = "current_branch"
+    help = "Gets the current branch name"
+    shell = "git rev-parse --abbrev-ref HEAD"
 
 [tool.poe.tasks.docs]
 help = "Documentation related commands"
 control.expr = "type"
 args = ["type"]
+uses = { LATEST_VERSION = "_git --type latest_tag", CURRENT_BRANCH="_git --type current_branch" }
 
     [[tool.poe.tasks.docs.switch]]
     case = "help"
     help = "Show help"
-    cwd = "documentation"
     cmd = "make"
 
     [[tool.poe.tasks.docs.switch]]
     case = "build"
     help = "Update sources for the documentation and build static HTML"
     sequence = [
+        { shell = '[[ -z $(git status -uno --porcelain) ]] || (echo "Your index contains uncommitted changes! Commit them and try again." && exit 1)' },
         "docs --type=clear",
-        { cmd = "make apidoc", cwd = "documentation" },
-        { cmd = "scripts/docs_fix_schema_private.sh" },
-        { cmd = "python scripts/docs_examples_generator/main.py", env = { PYTHONPATH="scripts" }},
-        { cmd = "make html", cwd = "documentation" }
+        { cmd = "make docs", cwd = "documentation" },
+        { cmd = 'python scripts/docs_root_redirect.py --version="${LATEST_VERSION}" --output="./documentation/build"', env = { "PYTHONPATH" = "scripts" } },
     ]
 
     [[tool.poe.tasks.docs.switch]]
     case = "open"
-    cwd = "documentation"
     help = "Open HTML Documentation"
-    cmd = "open build/html/index.html"
+    cwd = "documentation"
+    cmd = "open build/${CURRENT_BRANCH}/index.html"
+    uses = { CURRENT_BRANCH="_git --type current_branch" }
 
     [[tool.poe.tasks.docs.switch]]
     case = "clear"
-    cwd = "documentation"
     help = "Remove build"
-    sequence = [{ "script" = "shutil:rmtree('build/', ignore_errors=1)" }, { "script" = "shutil:rmtree('source/rst_source', ignore_errors=1)" }, { cmd = "make clean" }]
+    cwd = "documentation"
+    sequence = [{ "script" = "shutil:rmtree('build/', ignore_errors=1)" }, { "script" = "shutil:rmtree('source/rst_source', ignore_errors=1)" }]
 
 [tool.poe.tasks.changelog]
 help = "Changelog related commands"
