--- a/pyproject.toml
+++ b/pyproject.toml
@@ -208,7 +208,7 @@ uses = { LATEST_VERSION = "_git --type latest_tag", CURRENT_BRANCH="_git --type 
         { shell = '[ -z "$(git status -uno --porcelain)" ] || { echo "Your index contains uncommitted changes! Commit them and try again." && exit 1; }' },
         "docs --type=clear",
         { cmd = "make docs", cwd = "documentation" },
-        { cmd = 'python scripts/docs_root_redirect.py --version="${LATEST_VERSION}" --output="./documentation/build"', env = { "PYTHONPATH" = "scripts" } },
+        { cmd = 'python scripts/docs_root_redirect.py --prefix="${DOCS_URL_PREFIX}" --version="${LATEST_VERSION}" --output="./documentation/build"', env = { "PYTHONPATH" = "scripts" } },
     ]
 
     [[tool.poe.tasks.docs.switch]]
