--- a/pyproject.toml
+++ b/pyproject.toml
@@ -44,6 +44,7 @@ llama-index = { version = "^0.9.15",  optional = true }
 uvicorn = { version = "^0.22.0",  optional = true }
 fastapi = { version = "^0.100.0",  optional = true }
 lm-eval = { version = "^0.4.0",  optional = true }
+unitxt = { version = "^1.5.3",  optional = true }
 tqdm = { version = "^4.66.1", optional = true }
 
 [tool.black] # left for IDE compatibility (pycharm)
@@ -109,7 +110,7 @@ mypy = "^1.8.0"
 langchain = ["langchain-core", "pyyaml"]
 huggingface = ["datasets", "transformers"]
 llama-index = ["llama-index"]
-lm-eval = ["lm-eval", "tqdm"]
+lm-eval = ["lm-eval", "tqdm", "unitxt"]
 localserver = ["uvicorn", "fastapi"]
 
 [tool.pytest.ini_options]
